--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
   "homepage": "https://github.com/jlentz17/deep-thoughts#readme",
   "devDependencies": {
     "concurrently": "^6.2.1"
+  },
+  "dependencies": {
+    "jwt-decode": "^3.1.2",
+    "react-router-dom": "^5.3.0"
   }
 }
