--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,13 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.4.11",
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apollo-boost": "^0.4.9",
     "graphql": "^15.5.3",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
