--- a/package.json
+++ b/package.json
@@ -24,9 +24,5 @@
   "devDependencies": {
     "concurrently": "^6.2.1"
   },
-  "dependencies": {
-    "graphql-tag": "^2.12.5",
-    "jwt-decode": "^3.1.2",
-    "react-router-dom": "^5.3.0"
-  }
+  "dependencies": {}
 }
